--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "@tensorflow/tfjs": "^3.3.0",
     "@tensorflow/tfjs-react-native": "^0.6.0",
     "clarifai": "^2.9.1",
-    "expo": "^42.0.0",
+    "expo": "^43.0.0",
     "expo-asset": "~8.3.3",
     "expo-camera": "~11.2.2",
     "expo-constants": "~11.0.1",
@@ -47,11 +47,11 @@
     "react-native-web": "~0.17.1"
   },
   "devDependencies": {
-    "@babel/core": "~7.15.0",
-    "@types/react": "~17.0.17",
+    "@babel/core": "^7.12.9",
+    "@types/react": "~17.0.21",
     "@types/react-native": "~0.64.12",
     "@types/react-native-dotenv": "^0.2.0",
-    "jest-expo": "^42.0.0",
+    "jest-expo": "~43.0.1",
     "metro-react-native-babel-preset": "^0.66.2",
     "react-native-dotenv": "^2.4.2",
     "typescript": "~4.3.5"
