--- a/package.json
+++ b/package.json
@@ -23,27 +23,28 @@
     "@tensorflow/tfjs": "^3.3.0",
     "@tensorflow/tfjs-react-native": "^0.6.0",
     "clarifai": "^2.9.1",
-    "expo": "^43.0.0",
-    "expo-asset": "~8.3.3",
-    "expo-camera": "~11.2.2",
-    "expo-constants": "~11.0.1",
-    "expo-font": "~9.2.1",
-    "expo-gl": "~10.4.2",
-    "expo-image-manipulator": "~9.2.2",
-    "expo-image-picker": "~10.2.2",
-    "expo-linking": "~2.3.1",
-    "expo-splash-screen": "~0.11.2",
-    "expo-status-bar": "~1.0.4",
-    "expo-web-browser": "~9.2.0",
+    "expo": "^44.0.0",
+    "expo-asset": "~8.4.6",
+    "expo-camera": "~12.1.2",
+    "expo-constants": "~13.0.1",
+    "expo-file-system": "~13.1.4",
+    "expo-font": "~10.0.4",
+    "expo-gl": "~11.1.1",
+    "expo-image-manipulator": "~10.2.0",
+    "expo-image-picker": "~12.0.1",
+    "expo-linking": "~3.0.0",
+    "expo-splash-screen": "~0.14.1",
+    "expo-status-bar": "~1.2.0",
+    "expo-web-browser": "~10.1.0",
     "jpeg-js": "^0.4.2",
     "node-notifier": "10.0.0",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-42.0.0.tar.gz",
     "react-native-fs": "^2.16.6",
-    "react-native-gesture-handler": "~1.10.2",
-    "react-native-safe-area-context": "3.2.0",
-    "react-native-screens": "3.4.0",
+    "react-native-gesture-handler": "~2.1.0",
+    "react-native-safe-area-context": "3.3.2",
+    "react-native-screens": "~3.10.1",
     "react-native-web": "~0.17.1"
   },
   "devDependencies": {
@@ -51,7 +52,7 @@
     "@types/react": "~17.0.21",
     "@types/react-native": "~0.64.12",
     "@types/react-native-dotenv": "^0.2.0",
-    "jest-expo": "~43.0.1",
+    "jest-expo": "^44.0.0",
     "metro-react-native-babel-preset": "^0.66.2",
     "react-native-dotenv": "^2.4.2",
     "typescript": "~4.3.5"
